2012-07-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (get_base_directory): new functions
	(set_datapath): adapted

	* lua/lua-avt.c (set_datapath):
	eventually also add to package.path and package.cpath

2012-07-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-common.c (avt_prepare_raw_audio_data):
	new function
	replaces avt_load_raw_audio_data and avt_set_raw_audio_capacity
	all callers adapted

2012-07-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_pager):
	move the button to the right instead of down if it doesn't fit
	this is a workaround for a bug in SDL

2012-07-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (AVT_MAKE_BOOL): macro removed

2012-07-03  Andreas K. Foerster  <info@akfoerster.de>

	* configure: enable C99 syntax and start using it

2012-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_translate): new function
	lua/akfavatar/lang.lua: deleted

	* avatar-sdl.c (avt_license):
	don't return the term "license"

2012-06-30  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_pager_line): support separators

	* avatar-sdl.c (avt_pager, avt_pager_line, avt_pager_screen):
	support for horizontal scrolling

2012-06-29  Andreas K. Foerster  <info@akfoerster.de>

	* langposix.c, mingw/langwindows.c: new files

	* lua/lua-avt.c: set variable avt.language
	lua/akfavatar/lang.lua: adapted

2012-06-22  Andreas K. Foerster  <info@akfoerster.de>

	* audio-sdl.c: more steps for SDL independence

	* audio-common.c: move lots of code there

2012-06-21  Andreas K. Foerster  <info@akfoerster.de>

	* avtdata.h, avtdata.c, audio-common.c: new files

2012-06-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_draw_balloon):
	improve alignment of balloon in separate mode

2012-06-17  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-sdl.c:
	remove unsigned audio except for 8 bit

	* lua/lua-akfavatar-prg.c: use Logo on start-screen
