@@ -15,7 +15,7 @@ notice and this notice are preserved.  This file is offered as-is,
 without any warranty.
 
 
-akfoerster.xpm, computer.xpm, info.xpm,
+basedir.c, akfoerster.xpm, computer.xpm, info.xpm,
 harrumph.au, hey.au, negative.au, neutral.au, positive.au, okay.au,
 question.au, sad.au, hahaha.au, game_over.au:
 Made by Andreas K. Foerster
