@@ -6,6 +6,10 @@
 	* lua/lua-avt.c (set_datapath):
 	eventually also add to package.path and package.cpath
 
+	* basedir.c: new file
+	lua/lua-akfavatar-prg.c (find_scripts, local_lua_dir): adapted
+	lua/lua-avt.c (set_datapath): adapted
+
 2012-07-08  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, audio-common.c (avt_prepare_raw_audio_data):
